editor/tree-sitter/grammar.js
    source_file: $ => repeat(choice(
      $._newline,
      $._top_level_statement,
    )),

    _top_level_statement: $ => choice(
      $.import_statement,
      $.qualified_import_statement,
      $._statement,                          // _statement already includes _declaration
    ),

    /* =====================================================================
     * Imports
     * ===================================================================*/
    // Selective import: `from xxx import name [as alias] [, ...]`
    import_statement: $ => seq(
      'from',
      field('source', $.module_path),
      'import',
      field('items', $.import_list),
      $._newline,
    ),

    // Qualified import: `import xxx [as yyy]` (#1723, #1724).
    // The `as` alias form registers the alias as the effective name
    // (Python-style: `import math as m` makes `m.sqrt(...)` valid and
    // bare `math` undefined). Same-effective-name collisions are rejected.
    qualified_import_statement: $ => seq(
      'import',
      field('module', $.identifier),
      optional(seq('as', field('alias', $.identifier))),
      $._newline,
    ),

    module_path: $ => sep1($.identifier, '.'),

    import_list: $ => choice(
      sep1($.import_item, ','),
      seq('{', sep1($.import_item, ','), optional(','), '}'),
    ),

    import_item: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('alias', $.identifier))),
    ),

    /* =====================================================================
     * Declarations
     * ===================================================================*/
    decorator: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq(
        '(',
        optional($.decorator_arguments),
        ')',
      )),
    ),

    function_declaration: $ => seq(
      optional('async'),
      'fn',
      field('name', $.function_name),
      optional(field('generics', $.generic_parameters)),
      '(',
      optional(field('parameters', $.parameter_list)),
      ')',
      optional(seq('->', field('return_type', $._type))),
      choice(
        field('body', $.function_body),
        $._newline,                  // @native fn — no body
      ),
    ),

    // `identifier` already greedily absorbs a trailing `!` (see the
    // identifier terminal at the bottom), so no extra suffix is needed
    // for mutating-method names like `sort!`.
    function_name: $ => choice(
      $.identifier,
      $.operator_name,
    ),

    parameter_list: $ => sep1($.parameter, ','),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    generic_parameters: $ => seq(
      '<',
      sep1($.identifier, ','),
      '>',
    ),

    // Live-editing tolerance (#1623): the INDENT body is optional so that
    // partial input (`fn foo():` typed but body not yet started) produces
    // a complete `function_body` named node, allowing indents.scm
    // `@indent.begin` captures to fire. The Ry compiler enforces a
    // non-empty body at compile time. See editor/tree-sitter/README.md
    // §"Live-editing tolerance".
    function_body: $ => seq(
      ':',
      optional(seq(
        $._indent,
        repeat($.contract_clause),
        repeat1($._statement),
        $._dedent,
      )),
    ),

    _condition_list: $ => repeat1(seq($._expression, $._newline)),

    /* ------- Record declaration ------- */
    record_declaration: $ => seq(
      'record',
      field('name', $.identifier),
      optional(field('generics', $.generic_parameters)),
      ':',
      $._indent,
      repeat($._record_member),
      $._dedent,
    ),

    _record_member: $ => choice(
      $.record_field,
      $.record_invariant,
      $._newline,
    ),

    record_field: $ => seq(
      repeat(seq($.decorator, $._newline)),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
      $._newline,
    ),

    record_invariant: $ => seq(
      'invariant',
      ':',
      $._indent,
      $._condition_list,
      $._dedent,
    ),

    /* ------- Enum declaration (ADT) ------- */
    _type: $ => $.union_type,

    union_type: $ => prec.left(seq(
      $._primary_type,
      repeat(seq('|', $._primary_type)),
    )),

    _primary_type: $ => choice(
      $.primitive_type,
      $.named_type,
      $.tuple_type,
      $.function_type,
      $.weak_type,
      $.option_type,
      $.array_type,
    ),

    primitive_type: $ => choice(...PRIMITIVE_TYPES),

    named_type: $ => prec.right(seq(
      $.identifier,
      optional($.type_arguments),
      repeat(seq(
        '::',
        $.identifier,
        optional($.type_arguments),
      )),
    )),

    _statement: $ => choice(
      seq($._simple_statement, $._newline),
      $._compound_statement,
      $._declaration,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    assignment_statement: $ => prec.right(PREC.conditional - 1, seq(
      field('left', $._lvalue),
      '=',
      field('right', $._expression),
    )),

    expression_statement: $ => $._expression,

    _lvalue: $ => choice(
      $.identifier,
      $._lvalue_postfix,
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      ':',
      optional(field('consequence', $.block)),
      repeat(seq(
        'else',
        'if',
        field('alt_condition', $._expression),
        ':',
        optional(field('alt_consequence', $.block)),
      )),
      optional(seq(
        'else',
        optional(seq(
          ':',
          optional(field('alternative', $.block)),
        )),
      )),
    )),

    // Live-editing tolerance (#1623): see if_statement note above.
    for_statement: $ => seq(
      'for',
      field('target', $._for_target),
      'in',
      field('iter', $._expression),
      ':',
      optional(field('body', $.block)),
    ),

    _for_target: $ => choice(
      $.identifier,
      seq('(', sep1($.identifier, ','), ')'),
      // bare-comma destructure: `for a, b in iter:`
      seq($.identifier, ',', sep1($.identifier, ',')),
    ),

    // Two forms: `case <expr>:` (scrutinee form, pattern-matching) and
    // `case:` (no scrutinee, condition-list form — each arm is a boolean
    // condition expression). They use different arm grammars so they are
    // surfaced as distinct rules joined under `case_statement`.
    block: $ => seq(
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    /* =====================================================================
     * Patterns
     * ===================================================================*/
    qualified_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    )),

    _expression: $ => choice(
      $.lambda_expression,
      $.if_expression,
      $.case_expression,
      $._conditional_expression,
    ),

    lambda_expression: $ => prec(PREC.conditional, choice(
      // bare-paren single-param form (#1572):  x => x + 1
      seq(
        field('parameter', $.identifier),
        '=>',
        field('body', $._lambda_body),
      ),
      // parenthesized form: (x, y) => x + y    or    (x: int) -> int => x
      seq(
        field('parameters', $.lambda_params),
        optional(seq('->', field('return_type', $._type))),
        '=>',
        field('body', $._lambda_body),
      ),
      // block-body form: (params) -> Type:\n  <indented body>
      seq(
        field('parameters', $.lambda_params),
        optional(seq('->', field('return_type', $._type))),
        ':',
        field('body', $.block),
      ),
    )),

    lambda_params: $ => seq(
      '(',
      optional(sep1($.lambda_param, ',')),
      ')',
    ),

    lambda_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    _lambda_body: $ => choice($._expression, $.block),

    /* if-expression: `if cond => then else else_expr` (single-line sugar) */
    binary_expression: $ => choice(
      prec.right(PREC.coalesce,
        seq(field('left', $._expression), field('operator', '??'),  field('right', $._expression))),
      prec.left(PREC.or,
        seq(field('left', $._expression), field('operator', 'or'),  field('right', $._expression))),
      prec.left(PREC.and,
        seq(field('left', $._expression), field('operator', 'and'), field('right', $._expression))),
      ...[
        ['==', PREC.comparison],
        ['!=', PREC.comparison],
        ['<',  PREC.comparison],
        ['<=', PREC.comparison],
        ['>',  PREC.comparison],
        ['>=', PREC.comparison],
        ['|',  PREC.bit_or],
        ['^',  PREC.bit_xor],
        ['&',  PREC.bit_and],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['>>>',PREC.shift],
        ['..', PREC.range],
        ['+',  PREC.additive],
        ['-',  PREC.additive],
        ['*',  PREC.multiplicative],
        ['/',  PREC.multiplicative],
        ['//', PREC.multiplicative],
        ['%',  PREC.multiplicative],
      ].map(([op, p]) => prec.left(p,
        seq(field('left', $._expression), field('operator', op), field('right', $._expression)),
      )),
      // 'in' / 'not in' membership test
      prec.left(PREC.comparison,
        seq(field('left', $._expression),
            field('operator', choice('in', seq('not', 'in'))),
            field('right', $._expression))),
      // power is right-associative
      prec.right(PREC.power,
        seq(field('left', $._expression), field('operator', '**'), field('right', $._expression))),
    ),

    _postfix_expression: $ => choice(
      $._primary_expression,
      $.call_expression,
      $.index_expression,
      $.field_access,
      $.unwrap_expression,
      $.update_expression,
      $.cast_expression,
    ),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._postfix_expression),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    )),

    field_access: $ => prec(PREC.postfix, seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    argument_list: $ => sep1($.argument, ','),

    argument: $ => choice(
      seq(field('name', $.identifier), '=', field('value', $._expression)),
      field('value', $._expression),
    ),

    /* ------- Primary ------- */
    tuple_literal: $ => choice(
      // 1-tuple `(e,)`
      seq('(', $._expression, ',', ')'),
      // n-tuple `(e1, e2, ...)`  (n >= 2)
      seq('(', $._expression, ',', sep1($._expression, ','), ')'),
    ),

    list_literal: $ => seq(
      '[',
      optional(seq(sep1($._expression, ','), optional(','))),
      ']',
    ),

    map_literal: $ => seq(
      '{',
      sep1(seq(field('key', $._expression), ':', field('value', $._expression)), ','),
      optional(','),
      '}',
    ),

    set_literal: $ => choice(
      seq('{', '}'),                                    // empty (also empty-map; parser decides)
      seq('{', sep1($._expression, ','), optional(','), '}'),
    ),

    /* =====================================================================
     * Literals
     * ===================================================================*/
    // `Unit` is a type name only (used in `-> Unit`, `Result<Unit, _>`),
    // never a value-level literal — the singleton unit value cannot be
    // written directly in source. Keep it out of `_literal` and let the
    // type rule pick it up via `primitive_type`.
    boolean_literal: $ => choice('true', 'false'),
    none_literal:    $ => 'none',

    /* ------- Integer ------- */
    integer_literal: $ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
        /0b[01][01_]*/,
      ),
      optional(choice('i8','i16','i32','i64','u8','u16','u32','u64')),
    )),

    /* ------- Float ------- */
    float_literal: $ => token(seq(
      choice(
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/, optional(/[eE][+-]?[0-9][0-9_]*/)),
        seq(/[0-9][0-9_]*/, /[eE][+-]?[0-9][0-9_]*/),
      ),
      optional(choice('f32', 'f64')),
    )),

    /* ------- String -------
     * Standard double-quoted with escapes. Single-line only (no raw multi-line). */
    string_literal: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\\n]/,
        seq('\\', choice(
          /[ntr0\\"']/,
          /x[0-9a-fA-F]{2}/,
          /u\{[0-9a-fA-F]+\}/,
        )),
      )),
      '"',
    )),

    /* ------- Regex -------
     * `/pattern/flags`. Conflicts with `/` (division) — the external
     * scanner emits `_regex_literal` only when the parser state is
     * compatible with starting an expression. */
    regex_literal: $ => $._regex_literal,

    /* ------- f-string -------
     * The lexer (lexer.hpp / lexer.cpp readFStringSegment) emits three
     * specialized tokens for f-strings. The external scanner tracks
     * brace depth across `{...}` interpolations so closing `}` of the
     * interpolation can resume f-string lexing rather than ending a
     * map/set/block. */
    identifier: $ => token(seq(
      /[a-zA-Z_][a-zA-Z0-9_]*/,
      optional('!'),
    )),
