editor/tree-sitter/test/corpus/functions.txt
==================
basic fn with typed params and return type
==================

fn add(a: int, b: int) -> int:
    return a + b

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type)))
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type))))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (return_statement
        value: (binary_expression
          left: (qualified_identifier
            (identifier))
          right: (qualified_identifier
            (identifier)))))))

==================
fn with single str param returning a string literal
==================

fn greet(name: str) -> str:
    return "hello"

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type))))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (return_statement
        value: (string_literal)))))

==================
fn with no params and no return type
==================

fn noop():
    return

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    body: (function_body
      (return_statement))))

==================
fn with default value parameter
==================

fn add(a: int, b: int = 1) -> int:
    return a + b

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type)))
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type))
        default: (integer_literal)))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (return_statement
        value: (binary_expression
          left: (qualified_identifier
            (identifier))
          right: (qualified_identifier
            (identifier)))))))

==================
generic fn with single type parameter
==================

fn identity<T>(x: T) -> T:
    return x

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    generics: (generic_parameters
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (named_type
            (identifier)))))
    return_type: (union_type
      (named_type
        (identifier)))
    body: (function_body
      (return_statement
        value: (qualified_identifier
          (identifier))))))

==================
recursive fn with nested if statement
==================

fn factorial(n: int) -> int:
    if n <= 1:
        return 1
    return n * factorial(n - 1)

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (primitive_type))))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (if_statement
        condition: (binary_expression
          left: (qualified_identifier
            (identifier))
          right: (integer_literal))
        consequence: (block
          (return_statement
            value: (integer_literal))))
      (return_statement
        value: (binary_expression
          left: (qualified_identifier
            (identifier))
          right: (call_expression
            function: (qualified_identifier
              (identifier))
            arguments: (argument_list
              (argument
                value: (binary_expression
                  left: (qualified_identifier
                    (identifier))
                  right: (integer_literal))))))))))

==================
generic fn with type parameter bound (#2394)
==================

fn getName<T: Animal>(a: T) -> str:
    return a.name

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    generics: (generic_parameters
      (type_parameter
        name: (identifier)
        bound: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (named_type
            (identifier)))))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (return_statement
        value: (field_access
          object: (qualified_identifier
            (identifier))
          field: (identifier))))))

==================
generic fn with mixed bounded and unbounded type params (#2394)
==================

fn pair<T: Animal, U>(a: T, b: U) -> str:
    return a.name

---

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    generics: (generic_parameters
      (type_parameter
        name: (identifier)
        bound: (identifier))
      (type_parameter
        name: (identifier)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (union_type
          (named_type
            (identifier))))
      (parameter
        name: (identifier)
        type: (union_type
          (named_type
            (identifier)))))
    return_type: (union_type
      (primitive_type))
    body: (function_body
      (return_statement
        value: (field_access
          object: (qualified_identifier
            (identifier))
          field: (identifier))))))
