editor/tree-sitter/test/corpus/imports.txt
==================
import single name from std module
==================

from std.io import print

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)))))

==================
import multiple names from std module
==================

from std.io import print, println

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)))))

==================
import with alias
==================

from std.io import print as p

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)
        alias: (identifier)))))

==================
import from deeply nested module path
==================

from std.collections.list import filter, map, reduce

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)))))

==================
braced single-line import
==================

from std.io import { print, println }

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)))))

==================
braced import with alias
==================

from std.io import { print as p, println }

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)
        alias: (identifier))
      (import_item
        name: (identifier)))))

==================
braced single-element import with trailing comma
==================

from std.io import { print, }

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)))))

==================
braced multi-line import (#1727)
==================

from std.io import {
  print,
  println,
}

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)))))

==================
braced multi-line import without trailing comma (#1727)
==================

from std.io import {
  print,
  println
}

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier))
      (import_item
        name: (identifier)))))

==================
braced multi-line import with alias (#1727)
==================

from std.io import {
  print as p,
  println,
}

---

(source_file
  (import_statement
    source: (module_path
      (identifier)
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)
        alias: (identifier))
      (import_item
        name: (identifier)))))

==================
qualified import single module (#1723)
==================

import math

---

(source_file
  (qualified_import_statement
    module: (identifier)))

==================
qualified import with alias (#1724)
==================

import math as m

---

(source_file
  (qualified_import_statement
    module: (identifier)
    alias: (identifier)))

==================
qualified and selective import of the same module (#1723, #1724)
==================

import math
from math import PI

---

(source_file
  (qualified_import_statement
    module: (identifier))
  (import_statement
    source: (module_path
      (identifier))
    items: (import_list
      (import_item
        name: (identifier)))))
